netlogo-gui/resources/system/info.css
/*
    This style sheet is borrowed from the NetLogo User Manual.  However, some of the units were
    changed from em to px because Java's StyleSheet support is limited for relative units such as
    em and % (this will supposively improve with newer versions of the VM) - jrn 7/21/05
    BE VERY VERY CAREFUL when you alter this style sheet -- it's possible to put in
    innocent-looking things that work on some VM's but cause Java exceptions on other for example
    we were using "font-size: 125%" but it caused Java exceptions on Java 1.5 on Windows - ST
    8/25/05
*/
:link { color: rgb(110,0,110); }
:visited { color: rgb(110,0,110); }
body {
    margin-left: 5px;
    margin-bottom: 50px;
    font-family: arial, sans-serif;
    background: {BODY-BACKGROUND};
    font-size: {BODY-FONT-SIZE}pt;
    width: 650px;
}
body::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    background: {BODY-BACKGROUND};
}
body::-webkit-scrollbar-corner {
    background: {BODY-BACKGROUND};
}
body::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background: {SCROLLBAR-COLOR};
}
h1 {
    background: {H1-BACKGROUND};
    color: {H1-COLOR};
    font-size: {H1-FONT-SIZE}pt;
    margin-bottom: 12px;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 6px;
}
h2 {
    margin-top: 18px;
    margin-left: 6px;
    margin-bottom: 4px;
    background: {H2-BACKGROUND};
    color: {H2-COLOR};
    font-size: {H2-FONT-SIZE}pt;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 8px;
    padding-bottom: 6px;
}
h3 {
    margin-top: 20px;
    margin-left: 15px;
    margin-bottom: 4px;
    color: {H3-COLOR};
    font-size: {H3-FONT-SIZE}pt;
    padding: 0.2em;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 6px;
}
h4 {
    margin-top: 20px;
    margin-left: 15px;
    color: {H4-COLOR};
    font-size: {H4-FONT-SIZE}pt;
}
h5 {
    margin-top: 20px;
    margin-left: 15px;
    color: {H4-COLOR};
    font-size: {H5-FONT-SIZE}pt;
}
h6 {
    margin-top: 20px;
    margin-left: 15px;
    color: {H4-COLOR};
    font-size: {H6-FONT-SIZE}pt;
}
p {
    margin-top: 20px;
    margin-left: 15px;
    margin-bottom: 3px;
    color: {P-COLOR};
}
pre {
    background: {CODE-BACKGROUND};
    color: {CODE-COLOR};
    font-family: monospace;
    font-size: {BODY-FONT-SIZE}pt;
    padding-left: 10px;
    padding-right: 3px;
    padding-top: 7px;
    padding-bottom: 7px;
    margin-left: 15px;
    margin-top:9px;
    margin-bottom:0px;
}
code {
    font-family: {CODE-FONT};
    font-size: {BODY-FONT-SIZE}pt;
    color: {P-COLOR};
}
blockquote {
    background: {BLOCK-BAR};
    margin-left: 15px;
    margin-top: 7px;
    margin-bottom: 1px;
    padding-left: 3px;
}
blockquote div {
    background: {INFO-BACKGROUND};
    padding-top: 2px;
    padding-bottom: 10px;
}
blockquote p
{
    color: {P-COLOR};
}
ol {
    margin-bottom: 1px;
}
ul {
    margin-bottom: 1px;
}
li {
    color: {P-COLOR};
}
a {
    color: {LINK-COLOR};
}

